--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,15 +9,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #333c4d;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+
 
 .App-link {
   color: #61dafb;
