--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,34 +1,42 @@
-.App {
-  text-align: center;
+
+*{
+    margin: 0;
+    padding: 0;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.wrapper{
+    width: 1170px;
+    margin: auto;
 }
-
-.App-header {
-  background-color: #333c4d;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header{
+    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url("Egypt.jpg");
+    height: 100vh;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
 }
-
-
-
-.App-link {
-  color: #61dafb;
+.nav-item{
+  float: right;
+  list-style: none;
+  margin-top: 30px;
 }
+.nav-item li {
+  display: inline-block;
+}
+.nav-item li a{
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 20px;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 14px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+} 
+.nav-item li a:hover{
+  background: #fff;
+color: #333;
+} 
+.logo img{
+  width: 100px;
+  float: left;
+  height: auto;
 }
